--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
 
 
-</div>
+
     <!-- bottom - footer -->
     <footer class="row fixed-bottom align-items-center mb-3">
       <div class="col">
@@ -103,22 +103,13 @@
         </div>
       </div>
 
-      <!-- <div class="col-lg-6 social-desktop"> -->
-        <!-- <ul class-"social-icons d-inline">
-          <li><a href="https://twitter.com/purenewzealand" target="_blank"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/purenewzealand/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="https://www.facebook.com/purenewzealand" target="_blank"><i class="fa fa-facebook-f"></i></a></li>
-          <li><a href="https://www.youtube.com/purenewzealand" target="_blank"><i class="fa fa-youtube"></i></a></li>
-        </ul> -->
-
-
-
-      <!-- </div> -->
 
       <div class="col">
         <img id="appInfo" class="icon-size float-right pr-4" src="images/assets/icons/info.svg" alt="Information">
       </div>
     </footer>
+</div>
+
 
     <!-- modal location -->
     <div class="location-modal">
@@ -131,7 +122,7 @@
 
     <!-- modal information -->
     <div class="info-modal">
-      <div class="animate mt-5">
+      <div class="animate mt-5 desktop-border">
         <div class="bg-dark mx-3 py-1">
           <p class="text-white pl-3 pt-3 font-size-sm">INFORMATION</p>
           <div class="closeBar text-right text-white">
@@ -143,7 +134,7 @@
           <p>This app helps you to find and book accommdation within New Zealand that fits within your desired needs.</p>
           <p></br>FEATURES:</p>
           <ol class="pl-3">
-            <li>.Choose your destination for booking.</li>
+            <li>Choose your destination for booking.</li>
             <li>Enter date travel and no of guests.</li>
             <li>Filter accomodation types that suit your needs.</li>
             <li>Choose meal package options if prefered.</li>
@@ -155,6 +146,35 @@
         </div>
       </div>
     </div>
+
+    <!-- Modal -->
+<!-- <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">INFORMATION</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Kia Ora! Welcome to New Zealand.</p>
+        <p>This app helps you to find and book accommdation within New Zealand that fits within your desired needs.</p>
+        <p></br>FEATURES:</p>
+        <ol class="pl-3">
+          <li>Choose your destination for booking.</li>
+          <li>Enter date travel and no of guests.</li>
+          <li>Filter accomodation types that suit your needs.</li>
+          <li>Choose meal package options if prefered.</li>
+          <li>Sort the accomodation by price.</li>
+          <li>Map view of a list of accomodation available.</li>
+          <li>Summary of estimated total price.</li>
+          <li>Reserve your accomodation through link to approprate website.</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+</div> -->
 
 
     <!-- SECTION TWO - ACCOMMODATION OPTIONS  -->
