--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
           <div class="form-row px-2 align-items-center">
             <div class="col-sm-12 col-lg-2 mb-2">
               <select id="locationSelect" class="form-control">
-                <option selected>Location</option>
-                <option value="1">Auckland</option>
-                <option value="2">Wellington</option>
-                <option value="3">Christchurch</option>
-                <option value="3">Queenstown</option>
+                <option selected>Select Location</option>
+                <option value="Auckland">Auckland</option>
+                <option value="Wellington">Wellington</option>
+                <option value="Christchurch">Christchurch</option>
+                <option value="Queenstown">Queenstown</option>
               </select>
             </div>
 
             <div class="col-sm-12 col-lg-2 mb-2">
-              <input class="form-control" type="text" id="startDate" placeholder="Check-in">
+              <input class="form-control" type="text" id="startDate" placeholder="Check-in Date">
             </div>
             <div class="col-sm-12 col-lg-2 mb-2">
-              <input class="form-control" type="text" id="endDate" placeholder="Check-out">
+              <input class="form-control" type="text" id="endDate" placeholder="Check-out Date">
             </div>
 
             <div class="col-sm-12 col-lg-2 mb-2">
@@ -207,6 +207,9 @@
 
   <!-- jquery-UI script -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha256-KM512VNnjElC30ehFwehXjx1YCHPiQkOPmqnrWtpccM=" crossorigin="anonymous"></script>
+
+  <!-- Sweet Alert CDN -->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
   <!-- customised own JS script -->
   <script src="js/script.js"></script>
