--- a/index.html
+++ b/index.html
@@ -83,11 +83,6 @@
 
 
 
-    <!-- SECTION TWO -  ACCOMMODATION OPTIONS -->
-    <div class="container" id="accommodation">
-
-    </div>
-
 
 
     <!-- bottom - footer -->
@@ -193,7 +188,18 @@
       </div>
     </div>
 
-
+    <!-- <div class="container">
+      <p>Your Choices: </p>
+      <p>parseInt(chosenGuest) + ' guest/s ' + parseInt(days) + ' night/s, ' + parseInt(chosenLocation) + '</p>
+      <p> Available accommodation types. Please choose your preference.</p>
+      </br>
+      <div class="row">
+        <div class="col">
+          <img class="acc-Img img-thumbnail" src="images/accommodation/hotel.jpg" alt="Hotel"/>
+          <button id="hotel" class="btn btn-lg text-white bg-primary" type="button">Hotel</button>
+        </div>
+      </div>
+    </div> -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
