--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
 
     <!-- modal location -->
     <div class="location-modal">
-      <div class="closeBar text-right display-4">
+      <div class="close-bar text-right display-4">
       &times;
       </div>
       <div id="modalContent" class="animate"></div>
     </div>
 
 
-    <!-- modal information -->
+    <!-- modal app information -->
     <div class="info-modal">
       <div class="animate mt-5 desktop-border">
         <div class="bg-dark mx-3 py-1">
           <p class="text-white pl-3 pt-3 font-size-sm">INFORMATION</p>
-          <div class="closeBar text-right text-white">
+          <div class="close-bar text-right text-white">
             &times;
           </div>
         </div>
@@ -183,10 +183,21 @@
         <i class="fas fa-home text-white pr-3" id="backToHome"></i>
         <span class="text-white font-size-sm">ACCOMMODATION</span>
       </div>
-      <div id="banner"></div>
+      <div id="banner">
+          <button id="showHotel" class="btn btn-lg text-white bg-primary w-100" type="button">Hotel</button>
+      </div>
       <div id="result" class="row mt-5">
       </div>
     </div>
+
+
+    <!-- Modal screen display for view more accommodation -->
+    <div class="my-modal">
+      <div id="modalContent" class="animate"></div>
+
+    </div>
+
+
 
     <!-- <div class="container">
       <p>Your Choices: </p>
