--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
         <i class="fas fa-home text-white pr-3" id="backToHome"></i>
         <span class="text-white font-size-sm">ACCOMMODATION</span>
       </div>
-      <div id="banner">
-          <button id="showHotel" class="btn btn-lg text-white bg-primary w-100" type="button">Hotel</button>
+      <div id="banner" class="mt-3 text-center">
+          <!-- <button id="showHotel" class="btn btn-lg text-white bg-primary" type="button">Show Hotel</button> -->
       </div>
       <div id="result" class="row mt-5">
       </div>
@@ -192,7 +192,10 @@
 
 
     <!-- Modal screen display for view more accommodation -->
-    <div class="my-modal">
+    <div id="myModal">
+      <div class="close-bar text-right text-white">
+        &times;
+      </div>
       <div id="modalContent" class="animate"></div>
 
     </div>
