--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <form class="container align-items-center justify-content-cneter">
           <div class="form-row px-2 align-items-center">
             <div class="col-sm-12 col-lg-2 mb-2">
-              <select id="locationSelect" class="form-control">
+              <select name="group" id="locationSelect" class="form-control">
                 <option selected>Select Location</option>
                 <option value="Auckland">Auckland</option>
                 <option value="Wellington">Wellington</option>
@@ -184,22 +184,34 @@
         <span class="text-white font-size-sm">ACCOMMODATION</span>
       </div>
       <div id="banner" class="mt-3 text-center">
-          <!-- <button id="showHotel" class="btn btn-lg text-white bg-primary" type="button">Show Hotel</button> -->
+          <div id="summary"></div>
       </div>
-      <div id="result" class="row mt-5">
+      <div id="result" class="row">
       </div>
     </div>
 
 
     <!-- Modal screen display for view more accommodation -->
-    <div id="myModal">
+    <!-- <div id="myModal">
       <div class="close-bar text-right text-white">
         &times;
       </div>
       <div id="modalContent" class="animate"></div>
+    </div> -->
 
+<!-- ===================================== -->
+    <div class="modal fade w-100 animate" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+      <div class="modal-dialog modal-size" id="modal-dialog" role="document">
+      </div>
     </div>
 
+  <!-- <div id="myModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div id="modalContent" class="modal-content">
+      ...
+    </div>
+  </div>
+</div> -->
 
 
     <!-- <div class="container">
