--- a/index.html
+++ b/index.html
@@ -181,16 +181,16 @@
       </div>
 
       <div class="container-fluid">
-        <!-- <div class="row"> -->
-          <div class="float-left">
+        <div class="row">
+          <div class="col-lg-6 float-left">
             <!-- sort result -->
             <div id="result" class="row"></div>
           </div>
-          <div class="float-right">
+          <div class="col-lg-6 float-right pr-5 pt-5">
             <!-- google API map -->
             <div id="map"></div>
           </div>
-        <!-- </div> -->
+        </div>
       </div>
     </div>
 
@@ -199,7 +199,7 @@
 <!-- modal-lg : dialog -->
 
  <!--  modal accommodation info -->
-<div class="modal fade animate px-auto" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+<div class="modal fade px-auto" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
    <div class="modal-dialog modal-dialog-centered" id="modal-dialog" role="document">
      <div class="modal-content">
        <div class="modal-header bg-dark">
