--- a/index.html
+++ b/index.html
@@ -81,16 +81,7 @@
       </div>
     </div>
 
-    <!-- <select id="mealSelection" class="custom-select">
-      <option selected>Choose Meal Options</option>
-      <option value="breakfast">Breakfast $20</option>
-      <option value="lunch">Lunch $35</option>
-      <option value="dinner">Dinner $35</option>
-      <option value="all">All $80</option>
-      <option value="none">No Meal</option>
-    </select>
-     <div id="input" class="text-white display-4 pb-5"></div>
-  </div> -->
+
 
     <!-- bottom - footer -->
     <footer class="row fixed-bottom align-items-center py-3">
@@ -108,21 +99,18 @@
         <img id="appInfo" class="icon-size float-right pr-4" src="images/assets/icons/info.svg" alt="Information" data-toggle="modal" data-target="#infoModal">
       </div>
     </footer>
-</div>
-
-
-
+  </div>
 
 
 
 
 
   <!-- modal app information -->
-   <div id="infoModal" class="modal fade bd-example-modal-lg align-contents-center" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-     <div class="modal-dialog modal-lg" role="document">
-       <div class="modal-content">
-         <div class="modal-header bg-dark">
-          <h3 class="modal-title text-white text=break display-4 font-size-sm" id="infoTitle">INFORMATION</h3>
+  <div id="infoModal" class="modal fade bd-example-modal-lg align-contents-center" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-dark">
+          <h3 class="modal-title text-white text-break display-4 font-size-sm" id="infoTitle">INFORMATION</h3>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -130,7 +118,8 @@
         <div id="infoModalBody" class="modal-body">
           <p>Kia Ora! Welcome to New Zealand.</p>
           <p>This web app helps you to find and book accommdation within New Zealand that fits within your desired needs.</p>
-          <p></br>FEATURES:</p>
+          </br>
+          <p>FEATURES:</p>
           <ol class="pl-3">
             <li>Choose your destination for booking.</li>
             <li>Enter date travel and no of guests.</li>
@@ -141,7 +130,7 @@
             <li>Summary of estimated total price.</li>
             <li>Reserve your accomodation through link to approprate website.</li>
           </ol>
-            <img class="map-img float-right" src="images/assets/icons/NZmap.png" alt="nzMap">
+          <img class="map-img float-right" src="images/assets/icons/NZmap.png" alt="nzMap">
         </div>
         <div class="modal-footer">
           <ul class="list-unstyled">
@@ -149,71 +138,71 @@
             <li class="pt-2"><a href="https://www.newzealand.com/assets/Tourism-NZ/PDFs/cbd7fb84f3/f62081_6.PDF" target="_blank" class="text-primary">Download New Zealand Touring Map</a></li>
           </ul>
         </div>
-       </div>
-     </div>
-   </div>
-
-
-
-    <!-- SECTION TWO - ACCOMMODATION LIST  -->
-    <div id="sec2" class="mb-5">
-      <div class="bg-dark py-3 text-center">
-        <i class="fas fa-home text-white pr-3" id="backToHome"></i>
-        <span class="text-white font-size-sm text-break para-Style">ACCOMMODATION</span>
       </div>
-      <div id="imgBanner" class="text-center"></div>
-      <div class="container-fluid mt-4">
-        <div class="row">
-          <div class="col-sm-12 col-lg-6 mt-3">
-            <div id="summary"></div>
-          </div>
-          <div class="col-sm-12 col-lg-6 align-items-center mt-3">
-            <button type="button" id="showList" class="btn btn-primary">
-              <span><i class="fas fa-th-list pr-2"></i></span>
-              List View
-            </button>
-            <button type="button" id="showMap" class="btn btn-primary mr-3">
-              <span><i class="fas fa-map-marker-alt pr-2"></i></span>
-              Map View
-            </button>
-          </div>
+    </div>
+  </div>
+
+
+
+  <!-- SECTION TWO - ACCOMMODATION LIST  -->
+  <div id="sec2" class="mb-5">
+    <div class="bg-dark py-3 text-center">
+      <i class="fas fa-home text-white pr-3" id="backToHome"></i>
+      <span class="text-white font-size-sm text-break para-Style">ACCOMMODATION</span>
+    </div>
+    <div id="imgBanner" class="text-center"></div>
+    <div class="container-fluid mt-4">
+      <div class="row">
+        <div class="col-sm-12 col-lg-6 mt-3">
+          <div id="summary"></div>
         </div>
-      </div>
-
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-6 float-left">
-            <!-- sort result -->
-            <div id="result" class="row"></div>
-          </div>
-          <div class="col-lg-6 float-right pr-5 pt-5">
-            <!-- google API map -->
-            <div id="map"></div>
-          </div>
+        <div class="col-sm-12 col-lg-6 align-items-center mt-3">
+          <button type="button" id="showList" class="btn btn-primary">
+            <span><i class="fas fa-th-list pr-2"></i></span>
+            List View
+          </button>
+          <button type="button" id="showMap" class="btn btn-primary mr-3">
+            <span><i class="fas fa-map-marker-alt pr-2"></i></span>
+            Map View
+          </button>
         </div>
       </div>
     </div>
 
-
-<!-- bd-example-modal-lg -->
-<!-- modal-lg : dialog -->
-
- <!--  modal accommodation info -->
-<div class="modal fade px-auto" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-   <div class="modal-dialog modal-dialog-centered" id="modal-dialog" role="document">
-     <div class="modal-content">
-       <div class="modal-header bg-dark">
-         <div id="modalTitle"></div>
-        <!-- <h3 class="modal-title text-white text-break" id="modalTitle">Modal title</h3> -->
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-6 float-left">
+          <!-- sort result -->
+          <div id="result" class="row"></div>
+        </div>
+        <div class="col-lg-6 float-right pr-5 pt-5">
+          <!-- google API map -->
+          <div id="map"></div>
+        </div>
       </div>
-      <div id="modalBody" class="modal-body">
+    </div>
+  </div>
+
+
+  <!-- bd-example-modal-lg -->
+  <!-- modal-lg : dialog -->
+
+  <!--  modal accommodation info -->
+  <div class="modal fade px-auto" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" id="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-dark">
+          <div id="modalTitle"></div>
+          <!-- <h3 class="modal-title text-white text-break" id="modalTitle">Modal title</h3> -->
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div id="modalBody" class="modal-body">
+        </div>
       </div>
-     </div>
-   </div>
- </div>
+    </div>
+  </div>
 
 
 
@@ -238,7 +227,7 @@
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
   <!--  apiKey -->
-   <script src="js/config.json"></script>
+  <script src="js/config.json"></script>
 
   <!-- customised own JS script -->
   <script src="js/script.js"></script>
